updated with changes made from platform work

--- a/examples/google.html
+++ b/examples/google.html
@@ -36,7 +36,7 @@
         });
 
         skywise = WDT.skywise_tiles_google(map, skywise_app_id, skywise_token);
-        skywise.addTile('nalowaltradarcontours');
+        skywise.add('nalowaltradarcontours');
 
       }
       </script>
