--- a/examples/leaflet.html
+++ b/examples/leaflet.html
@@ -27,7 +27,7 @@
           .setView([38.5,-95], 5);
 
         var skywise = WDT.skywise_tiles_leaflet(map, skywise_app_id, skywise_token);
-        skywise.addTile('nalowaltradarcontours');
+        skywise.add('nalowaltradarcontours');
 
       </script>
     </body>
