--- a/examples/mapbox.html
+++ b/examples/mapbox.html
@@ -24,7 +24,7 @@
 
 
         var skywise = WDT.skywise_tiles_mapbox(map, skywise_app_id, skywise_token);
-        skywise.addTile('nalowaltradarcontours');
+        skywise.add('nalowaltradarcontours');
 
       </script>
     </body>
