moved keys from dist to examples

--- a/examples/google.html
+++ b/examples/google.html
@@ -16,7 +16,7 @@
     <body>
       <div id="map"></div>
       <script src="../dist/skywise-tiles.google.src.js"></script>
-      <script src="../dist/keys.js"></script>
+      <script src="keys.js"></script>
       <script>
       var map, skywise;
       var skywise_app_id = window.demo_keys.skywise_app_id;
