--- a/examples/mapbox-gl.html
+++ b/examples/mapbox-gl.html
@@ -13,7 +13,7 @@
     <body>
       <div id="map"></div>
       <script src="../dist/skywise-tiles.mapbox-gl.src.js"></script>
-      <script src="../dist/keys.js"></script>
+      <script src="keys.js"></script>
     	<script>
         mapboxgl.accessToken = window.demo_keys.mapbox_access_token;
         var skywise_app_id = window.demo_keys.skywise_app_id;
